--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ task clean(type: Delete) {
 }
 
 ext {
+//    kotlinVersion = '1.6.10'
     materialVersion = '1.6.0-alpha03'
     navigationVersion = '2.4.1'
     constraintLayoutVersion = '2.1.3'
@@ -55,4 +56,6 @@ ext {
     okhttp3Version = '5.0.0-alpha.5'
     kotlinxSerializationJsonVersion = '1.2.2'
     retrofit2Version = '2.9.0'
+    rxJava2Version = '2.2.21'
+    rxAndroidVersion = '2.1.1'
 }
