--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ buildscript {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"        // NOTE: Do not place your application dependencies here; they belong
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
+        // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
@@ -27,7 +29,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    materialVersion = '1.6.0-alpha02'
+    kotlinVersion = '1.6.10'
+    materialVersion = '1.6.0-alpha03'
     navigationVersion = '2.4.1'
     constraintLayoutVersion = '2.1.3'
     recyclerViewVersion = '1.2.1'
@@ -46,4 +49,7 @@ ext {
     timberVersion = '5.0.1'
 
     groupieVersion = '2.10.0'
+
+    okhttp3_version = '5.0.0-alpha.5'
+    kotlinx_serialization_json_version = '1.2.2'
 }
