--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.6.10'
+    ext {
+        kotlinVersion = '1.6.10'
+        navigationVersion = '2.4.1'
+    }
     repositories {
         google()
         mavenCentral()
@@ -10,7 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,7 +32,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    kotlinVersion = '1.6.10'
     materialVersion = '1.6.0-alpha03'
     navigationVersion = '2.4.1'
     constraintLayoutVersion = '2.1.3'
@@ -50,6 +52,7 @@ ext {
 
     groupieVersion = '2.10.0'
 
-    okhttp3_version = '5.0.0-alpha.5'
-    kotlinx_serialization_json_version = '1.2.2'
+    okhttp3Version = '5.0.0-alpha.5'
+    kotlinxSerializationJsonVersion = '1.2.2'
+    retrofit2Version = '2.9.0'
 }
