--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    materialVersion = '1.6.0-alpha03'
+    materialVersion = '1.6.0-beta01'
     navigationVersion = '2.4.1'
     constraintLayoutVersion = '2.1.3'
     recyclerViewVersion = '1.2.1'
@@ -44,20 +44,21 @@ ext {
     lifecycleVersion = '2.4.1'
     lifecycleExtensionVersion = '2.2.0'
 
-    runnerVersion = '1.5.0-alpha01'
+    runnerVersion = '1.5.0-alpha02'
     rulesVersion = '1.0.1'
     junitVersion = '4.13.2'
-    espressoVersion = '3.5.0-alpha04'
+    espressoVersion = '3.5.0-alpha05'
     timberVersion = '5.0.1'
 
     groupieVersion = '2.10.0'
 
-    okhttp3Version = '5.0.0-alpha.5'
-    kotlinxSerializationJsonVersion = '1.2.2'
+    okhttp3Version = '5.0.0-alpha.6'
+    kotlinxSerializationJsonVersion = '1.3.2'
     retrofit2Version = '2.9.0'
     retrofit2Rxjava2AdapterVersion = '1.0.0'
     retrofit2KotlinxSerializationConverterVersion = '0.8.0'
 
     rxJava2Version = '2.2.21'
     rxAndroidVersion = '2.1.1'
+    roomVersion = '2.4.2'
 }
