--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
     implementation "androidx.room:room-rxjava2:$roomVersion"
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation "android.arch.persistence.room:rxjava2:$archPersistenceRoomVersion"
 
 }
